fixing overview overflow problem

--- a/public/layout/sass/_timeline.scss
+++ b/public/layout/sass/_timeline.scss
@@ -110,7 +110,6 @@
 		text-align: center;
 		padding: $pad*0.75 0;
 		@include type-light;
-		height: 93%;
 		
 		.timeline-user-avatar {
 			display: block;
